// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OutboundIntegrationHandlerOpenWeather > should return daily with forecast average for CITY 1`] = `
[
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 0,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
      "source": "OpenWeather Free Forecast",
    },
    "outputKey": "HDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 3.6999999999999993,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
      "source": "OpenWeather Free Forecast",
    },
    "outputKey": "CDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 55,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
      "source": "OpenWeather Free Forecast",
    },
    "outputKey": "HUMIDITY",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 22,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
      "source": "OpenWeather Free Forecast",
    },
    "outputKey": "TEMPERATURE",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 1.5,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
      "source": "OpenWeather Free Forecast",
    },
    "outputKey": "RAIN",
  },
]
`;

exports[`OutboundIntegrationHandlerOpenWeather > should return daily with historical average for CITY 1`] = `
[
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 0,
    },
    "info": {
      "aggregatedHours": 2,
      "source": "OpenWeather Historical",
    },
    "outputKey": "HDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 3.6999999999999993,
    },
    "info": {
      "aggregatedHours": 2,
      "source": "OpenWeather Historical",
    },
    "outputKey": "CDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 55,
    },
    "info": {
      "aggregatedHours": 2,
      "source": "OpenWeather Historical",
    },
    "outputKey": "HUMIDITY",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 22,
    },
    "info": {
      "aggregatedHours": 2,
      "source": "OpenWeather Historical",
    },
    "outputKey": "TEMPERATURE",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 1.5,
    },
    "info": {
      "aggregatedHours": 2,
      "source": "OpenWeather Historical",
    },
    "outputKey": "RAIN",
  },
]
`;

exports[`OutboundIntegrationHandlerOpenWeather > should return minutely for LAT_LONG 1`] = `
[
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 0,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
    },
    "outputKey": "HDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 3.6999999999999993,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
    },
    "outputKey": "CDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 55,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
    },
    "outputKey": "HUMIDITY",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 22,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
    },
    "outputKey": "TEMPERATURE",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 0.5,
    },
    "info": {
      "country": "TR",
      "location": "Mersin",
    },
    "outputKey": "RAIN",
  },
]
`;
